<resources>
    <string name="appName">shared</string>
    <string name="connectionError">Connection Error</string>
    <string name="youAreOffline">You are offline</string>
</resources>
